--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
@@ -16,12 +17,16 @@
 title: Back-of-the-Envelope Climate Change 
 #email: hello@patdryburgh.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Web Page of the Book by Marco Cosentino Lagomarsino.
+A Book About Data
+##  Web Page of the Book 
+## by Marco Cosentino Lagomarsino.
 baseurl: "/boe" # the subpath of your site, e.g. /blog
-url: "http://mcltone.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-icon: /assets/images/icon-512.png
+url: "https://mcltone.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+icon: assets/images/icon-512.png
 #twitter_username: mcltone
-#github_username:  mcltone
+github_username:  mcltone
+hide_credits: true
+hide_search: true
 
 # Build settings
 markdown: kramdown
@@ -41,5 +46,7 @@ markdown: kramdown
 plugins:
   - jekyll-paginate
 
-paginate: 3
+paginate: 5
 paginate_path: "/page/:num/"
+
+
