--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Back-of-the-Envelope Climate Change 
 #email: hello@patdryburgh.com
-description: >- # this means to ignore newlines until "baseurl:"
-A Book About Data
+description: >- A Book About Data
 ##  Web Page of the Book 
 ## by Marco Cosentino Lagomarsino.
 baseurl: "/boe" # the subpath of your site, e.g. /blog
