--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,12 @@
 # in the templates via {{ site.myvariable }}.
 title: Back-of-the-Envelope Climate Change 
 #email: hello@patdryburgh.com
-description: >- 
-# A Book About Data
-Web Page of the Book  by Marco Cosentino Lagomarsino.
+description: >- # this means to ignore newlines until "baseurl:"
+  An inarguably well-designed Jekyll theme.
 baseurl: "/boe" # the subpath of your site, e.g. /blog
+#A Book About Data
+#Web Page of the Book  by Marco Cosentino Lagomarsino.
+#baseurl: "/boe" # the subpath of your site, e.g. /blog
 url: "https://mcltone.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: assets/images/icon-512.png
 #twitter_username: mcltone
